Fix table alignment

--- a/src/domain/event/eventOccurrence.module.scss
+++ b/src/domain/event/eventOccurrence.module.scss
@@ -50,7 +50,7 @@ tr {
       min-width: 17rem;
     }
     &.remainingCapacity {
-      text-align: right;
+      text-align: center;
     }
   }
 }
